tests/specs/private_type_referenced_from_class_member.txt
# mod.ts
/** Comment */
export class Other {
  /** Comment */
  prop: YesDiagnostic
}

class YesDiagnostic {}

# diagnostics
error[private-type-ref]: public type 'Other.prototype.prop' references private type 'YesDiagnostic'
 --> /mod.ts:4:3
  | 
4 |   prop: YesDiagnostic
  |   ^
  = hint: make the referenced type public or remove the reference
  | 
7 | class YesDiagnostic {}
  | - this is the referenced type
  | 

  info: to ensure documentation is complete all types that are exposed in the public API must be public

# output.txt
Defined in file:///mod.ts:1:1

class Other
  Comment

  prop: YesDiagnostic
    Comment

Defined in file:///mod.ts:6:1

private class YesDiagnostic



# output.json
{
  "symbols": [
    {
      "name": "Other",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 1,
            "col": 0,
            "byteIndex": 15
          },
          "declarationKind": "export",
          "jsDoc": {
            "doc": "Comment"
          },
          "kind": "class",
          "def": {
            "isAbstract": false,
            "constructors": [],
            "properties": [
              {
                "jsDoc": {
                  "doc": "Comment"
                },
                "tsType": {
                  "repr": "YesDiagnostic",
                  "kind": "typeRef",
                  "value": {
                    "typeParams": null,
                    "typeName": "YesDiagnostic"
                  }
                },
                "readonly": false,
                "accessibility": null,
                "optional": false,
                "isAbstract": false,
                "isStatic": false,
                "name": "prop",
                "location": {
                  "filename": "file:///mod.ts",
                  "line": 3,
                  "col": 2,
                  "byteIndex": 55
                }
              }
            ],
            "indexSignatures": [],
            "methods": [],
            "extends": null,
            "implements": [],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    },
    {
      "name": "YesDiagnostic",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 6,
            "col": 0,
            "byteIndex": 78
          },
          "declarationKind": "private",
          "kind": "class",
          "def": {
            "isAbstract": false,
            "constructors": [],
            "properties": [],
            "indexSignatures": [],
            "methods": [],
            "extends": null,
            "implements": [],
            "typeParams": [],
            "superTypeParams": []
          }
        }
      ]
    }
  ]
}
